--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -3,10 +3,10 @@ name: Auto commit
 on:
   push:
     branches:
-      - main
+      - master
 
   schedule:
-    - cron: "1 * * * *"
+    - cron: "0 7,9,11 * * 1,3" # See https://crontab.guru/#0_7,9,11_*_*_1,3
 
 jobs:
   auto_commit:
