--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -3,10 +3,10 @@ name: Auto commit
 on:
   push:
     branches:
-      - master
+      - main
 
   schedule:
-    - cron: "0 7,9,11 * * 1,3" # See https://crontab.guru/#0_7,9,11_*_*_1,3
+    - cron: "1 * * * *"
 
 jobs:
   auto_commit:
@@ -29,21 +29,7 @@ jobs:
           git config --local user.email "fadilahsyafaat2427@gmail.com"
           git config --local user.name "hiroshiyoka"
           git add -A
-
-          arr[0]="chore(bot): 😂 auto commit"
-          arr[1]="chore(bot): 😱 auto commit"
-          arr[2]="chore(bot): 👿 auto commit"
-          arr[3]="chore(bot): 💩 auto commit"
-          arr[4]="chore(bot): 🙏 auto commit"
-          arr[5]="chore(bot): 🙈 auto commit"
-          arr[6]="chore(bot): 🐐 auto commit"
-          arr[7]="chore(bot): 🤖 auto commit"
-          arr[8]="chore(bot): 🟩 auto commit"
-          arr[9]="chore(bot): 👻 auto commit"
-
-          rand=$[$RANDOM % ${#arr[@]}]
-
-          git commit -m "${arr[$rand]}"
+          git commit -m "chore(bot): auto commit"
 
       - name: GitHub Push
         uses: ad-m/github-push-action@v0.6.0
